--- a/package.json
+++ b/package.json
@@ -28,14 +28,29 @@
         "icon": "./icon-dark.svg"
       },
       {
-        "command": "template-dance.refreshTemplate",
-        "title": "refresh template",
-        "icon": "./icon-refresh.svg"
-      },
-      {
         "command": "template-dance.addTemplate",
         "title": "Add template",
         "icon": "./icon-add.svg"
+      },
+      {
+        "command": "template-dance.import",
+        "title": "import template",
+        "icon": "./icon-import.svg"
+      },
+      {
+        "command": "template-dance.revoke",
+        "title": "revoke",
+        "icon": "./icon-revoke.svg"
+      },
+      {
+        "command": "template-dance.searchTemplate",
+        "title": "search template",
+        "icon": "./icon-search.svg"
+      },
+      {
+        "command": "template-dance.refreshTemplate",
+        "title": "refresh template",
+        "icon": "./icon-refresh.svg"
       },
       {
         "command": "template-dance.editTemplate",
@@ -56,11 +71,6 @@
         "command": "template-dance.useTemplate",
         "title": "use template",
         "icon": "./icon-check.svg"
-      },
-      {
-        "command": "template-dance.searchTemplate",
-        "title": "search template",
-        "icon": "./icon-search.svg"
       },
       {
         "command": "template-dance.selectTemplate",
@@ -93,19 +103,24 @@
     "menus": {
       "view/title": [
         {
-          "command": "template-dance.refreshTemplate",
-          "group": "navigation",
-          "when": "view == templateDanceTreeView"
-        },
-        {
           "command": "template-dance.addTemplate",
-          "group": "navigation",
-          "when": "view == templateDanceTreeView"
+          "group": "navigation"
         },
         {
           "command": "template-dance.searchTemplate",
-          "group": "navigation",
-          "when": "view == templateDanceTreeView"
+          "group": "navigation"
+        },
+        {
+          "command": "template-dance.refreshTemplate",
+          "group": "navigation"
+        },
+        {
+          "command": "template-dance.import",
+          "group": "navigation"
+        },
+        {
+          "command": "template-dance.revoke",
+          "group": "navigation"
         }
       ],
       "view/item/context": [
@@ -146,16 +161,17 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.77.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.77.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^4.9.5",
-    "@vscode/test-electron": "^2.3.0"
-  }
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {}
 }
