icon深浅色适配

--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "themes": [
+      {
+        "id": "myTheme",
+        "label": "My Theme",
+        "uiTheme": "vs-dark",
+        "path": "./themes/myTheme.json"
+      }
+    ],
     "viewsWelcome": [
       {
         "view": "nodeDependencies",
@@ -30,47 +38,74 @@
       {
         "command": "template-dance.addTemplate",
         "title": "Add template",
-        "icon": "./src/icon/icon-add.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-add.svg",
+          "light": "./src/icon/icon-light-add.svg"
+        }
       },
       {
         "command": "template-dance.import",
         "title": "import template",
-        "icon": "./src/icon/icon-import.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-import.svg",
+          "light": "./src/icon/icon-light-import.svg"
+        }
       },
       {
         "command": "template-dance.revoke",
         "title": "revoke",
-        "icon": "./src/icon/icon-revoke.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-revoke.svg",
+          "light": "./src/icon/icon-light-revoke.svg"
+        }
       },
       {
         "command": "template-dance.searchTemplate",
         "title": "search template",
-        "icon": "./src/icon/icon-search.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-search.svg",
+          "light": "./src/icon/icon-light-search.svg"
+        }
       },
       {
         "command": "template-dance.refreshTemplate",
         "title": "refresh template",
-        "icon": "./src/icon/icon-refresh.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-refresh.svg",
+          "light": "./src/icon/icon-light-refresh.svg"
+        }
       },
       {
         "command": "template-dance.editTemplate",
         "title": "edit template",
-        "icon": "./src/icon/icon-edit.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-edit.svg",
+          "light": "./src/icon/icon-light-edit.svg"
+        }
       },
       {
         "command": "template-dance.viewTemplate",
         "title": "view template",
-        "icon": "./src/icon/icon-browse.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-browse.svg",
+          "light": "./src/icon/icon-light-browse.svg"
+        }
       },
       {
         "command": "template-dance.deleteTemplate",
         "title": "delete template",
-        "icon": "./src/icon/icon-delete.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-delete.svg",
+          "light": "./src/icon/icon-light-delete.svg"
+        }
       },
       {
         "command": "template-dance.useTemplate",
         "title": "use template",
-        "icon": "./src/icon/icon-check.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-check.svg",
+          "light": "./src/icon/icon-light-check.svg"
+        }
       },
       {
         "command": "template-dance.selectTemplate",
@@ -79,7 +114,10 @@
       {
         "command": "template-dance.export",
         "title": "use template",
-        "icon": "./src/icon/icon-export.svg"
+        "icon": {
+          "dark": "./src/icon/icon-dark-export.svg",
+          "light": "./src/icon/icon-light-export.svg"
+        }
       }
       
     ],
