--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,10 @@
 .vscode/**
 .vscode-test/**
-src/**
+test/**
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
+**/jsconfig.json
 **/tsconfig.json
-**/.eslintrc.json
 **/*.map
-**/*.ts
+**/.eslintrc.json
