--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "template dance",
   "description": "",
   "version": "0.0.1",
+  "publisher": "koalaG",
   "engines": {
     "vscode": "^1.80.0"
   },
@@ -13,6 +14,11 @@
     "onCommand",
     "onView"
   ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gllwhat/template-dance.git"
+  },
   "main": "./src/extension.js",
   "contributes": {
     "themes": [
